# coop

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  architecture.txt  cabal.project  coop.cabal  docker-compose.yml
.github/workflows/: ci.yml  release.yml
CoopApp/: Product.md
CoopApp/CoopApp/: CoopApp.swift  CoopManager.swift  LogViewer.swift
CoopApp/CoopApp.xcodeproj/: project.pbxproj
CoopApp/CoopApp/Assets.xcassets/MenuBarIconError.imageset/: Contents.json
CoopApp/CoopApp/Assets.xcassets/MenuBarIconFill.imageset/: Contents.json
CoopApp/CoopApp/Assets.xcassets/MenuBarIconOutline.imageset/: Contents.json
app/: Main.hs
config/: coop-dryrun.dhall  coop-local.dhall.example  coop.dhall
config/dryrun-data/: guidelines.md  llm-instructions.md
docs/: google-calendar-setup.md  notion-setup.md  slack-setup.md
scripts/: build-dmg.sh
src/Coop/: Config.hs  Scheduler.hs
src/Coop/Adapter/Claude/: Client.hs  LLM.hs  Types.hs
src/Coop/Adapter/Dryrun/: CalendarStore.hs  DocStore.hs  LLM.hs  Notifier.hs  TaskStore.hs
src/Coop/Adapter/GitHub/: Client.hs  TaskStore.hs  Types.hs
src/Coop/Adapter/GoogleCalendar/: Auth.hs  CalendarStore.hs  Client.hs  Types.hs
src/Coop/Adapter/Notion/: Client.hs  DocStore.hs  TaskStore.hs  Types.hs
src/Coop/Adapter/OpenAI/: Client.hs  LLM.hs  Types.hs
src/Coop/Adapter/Slack/: History.hs  Notifier.hs  SocketMode.hs
src/Coop/Agent/: CatchUp.hs  Context.hs  Core.hs  Prompt.hs
src/Coop/App/: Env.hs  Log.hs  Monad.hs
src/Coop/Domain/: Calendar.hs  Doc.hs  LLM.hs  Mention.hs  Notification.hs  Task.hs
src/Coop/Effect/: CalendarStore.hs  DocStore.hs  LLM.hs  Notifier.hs  TaskStore.hs
src/Coop/Server/: API.hs  Handlers.hs
test/: Spec.hs
test/Coop/: ConfigSpec.hs  SchedulerSpec.hs
test/Coop/Agent/: CatchUpSpec.hs
test/Coop/Domain/: MentionSpec.hs  TaskSpec.hs
