cabal-version:      3.0
name:               coop
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daishi Nakajima
maintainer:         nakaji.dayo@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
    default-extensions:
        DerivingStrategies
        DeriveAnyClass
        OverloadedStrings
        DataKinds
        TypeOperators

library
    import:           warnings
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
        Coop.Config
        Coop.Domain.Task
        Coop.Domain.Mention
        Coop.Domain.Notification
        Coop.Domain.LLM
        Coop.Domain.Doc
        Coop.Domain.Calendar
        Coop.Effect.TaskStore
        Coop.Effect.DocStore
        Coop.Effect.LLM
        Coop.Effect.Notifier
        Coop.Effect.CalendarStore
        Coop.Adapter.Dryrun.TaskStore
        Coop.Adapter.Dryrun.DocStore
        Coop.Adapter.Dryrun.LLM
        Coop.Adapter.Dryrun.Notifier
        Coop.Adapter.Dryrun.CalendarStore
        Coop.Adapter.Claude.Types
        Coop.Adapter.Claude.Client
        Coop.Adapter.Claude.LLM
        Coop.Adapter.OpenAI.Types
        Coop.Adapter.OpenAI.Client
        Coop.Adapter.OpenAI.LLM
        Coop.Adapter.Notion.Types
        Coop.Adapter.Notion.Client
        Coop.Adapter.Notion.DocStore
        Coop.Adapter.Notion.TaskStore
        Coop.Adapter.Slack.History
        Coop.Adapter.Slack.Notifier
        Coop.Adapter.Slack.SocketMode
        Coop.Adapter.GoogleCalendar.Types
        Coop.Adapter.GoogleCalendar.Auth
        Coop.Adapter.GoogleCalendar.Client
        Coop.Adapter.GoogleCalendar.CalendarStore
        Coop.Server.API
        Coop.Server.Handlers
        Coop.Agent.CatchUp
        Coop.Agent.Core
        Coop.Agent.Context
        Coop.Agent.Prompt
        Coop.App.Env
        Coop.App.Monad
        Coop.App.Log
        Coop.Scheduler
    build-depends:
        base ^>=4.18.3.0
      , aeson >=2.1
      , bytestring >=0.11
      , text >=2.0
      , time >=1.12
      , containers >=0.6
      , mtl >=2.3
      , stm >=2.5
      , unliftio >=0.2
      , servant >=0.20
      , servant-server >=0.20
      , warp >=3.3
      , wai >=3.2
      , http-client >=0.7
      , http-client-tls >=0.3
      , http-types >=0.12
      , req >=3.13
      , dhall >=1.41
      , katip >=0.8
      , uuid >=1.3
      , crypton >=0.34
      , memory >=0.18
      , directory >=1.3
      , filepath >=1.4
      , process >=1.6
      , cron >=0.7
      , slacker

executable coop
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0
      , coop
      , text
      , containers
      , stm
      , katip
      , http-client
      , http-client-tls
      , warp
      , unliftio
      , dotenv >=0.11
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite coop-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: GHC2021
    other-modules:
        Coop.Domain.TaskSpec
        Coop.Domain.MentionSpec
    build-depends:
        base ^>=4.18.3.0
      , coop
      , hspec >=2.11
      , text
      , aeson
      , time
      , containers
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
